tests/errors/validation/init-inside-namespace.fn
---
Description: Constructor declared inside a namespace
Expected: compile error
---

namespace BadNs
{
    init()
    {
    }
}

type Program
{
    fn Main -> i32
    {
        return 0
    }
}
